--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Rock Paper Scissors</h1>
+      <h2>First to 5 wins!</h2>
+    </header>
+    <div class="container">
+      <div class="score-title">Score</div>
+      <div class="scoreboard">
+        <div class="player-score">Player: 0</div>
+        <div class="comp-score">Computer: 0</div>
+      </div>
+      <div class="buttons">
+        <button class="btn1" type="button" value="Rock">Rock</button>
+        <button class="btn2" type="button" value="Paper">Paper</button>
+        <button class="btn3" type="button" value="Scissors">Scissors</button>
+      </div>
+    </div>
+    <footer>
+      <p>Copyright © 2022 RimaSem for The Odin Project</p>
+    </footer>
+  </body>
 </html>
