Improve styling, add img buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1>Rock Paper Scissors</h1>
-      <h2>First to 5 wins!</h2>
+      <h2>--- First to 5 wins! ---</h2>
     </header>
     <div class="container">
       <div class="score-title">Score</div>
@@ -20,9 +20,13 @@
         <div class="comp-score">Computer: 0</div>
       </div>
       <div class="buttons">
-        <button class="btn1" type="button" value="Rock">Rock</button>
-        <button class="btn2" type="button" value="Paper">Paper</button>
-        <button class="btn3" type="button" value="Scissors">Scissors</button>
+        <img class="Rock" src="img/rock3.png" alt="Rock hand sign" />
+        <img class="Paper" src="img/paper33.png" alt="Paper hand sign" />
+        <img
+          class="Scissors"
+          src="img/scissors3.png"
+          alt="Scissors hand sign"
+        />
       </div>
     </div>
     <footer>
