--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container">
       <div class="score-title">Score</div>
       <div class="scoreboard">
-        <div class="player-score">Player: 0</div>
-        <div class="comp-score">Computer: 0</div>
+        <div class="player-score">Player: <span id="p-scr">0</span></div>
+        <div class="comp-score">Computer: <span id="c-scr">0</span></div>
       </div>
       <div class="buttons">
         <img class="Rock" src="img/rock3.png" alt="Rock hand sign" />
