--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
   <body>
     <header>
       <h1>Rock Paper Scissors</h1>
-      <h2>--- First to 5 wins! ---</h2>
+      <h2>First to 5 wins!</h2>
     </header>
     <div class="container">
-      <div class="score-title">Score</div>
+      <div class="score-text">
+        <div class="score-title">Score</div>
+        <button type="reset" value="Reset">Reset</button>
+      </div>
       <div class="scoreboard">
         <div class="player-score">Player: <span id="p-scr">0</span></div>
         <div class="comp-score">Computer: <span id="c-scr">0</span></div>
       </div>
       <div class="buttons">
         <img class="Rock" src="img/rock3.png" alt="Rock hand sign" />
-        <img class="Paper" src="img/paper33.png" alt="Paper hand sign" />
+        <img class="Paper" src="img/paper3.png" alt="Paper hand sign" />
         <img
           class="Scissors"
           src="img/scissors3.png"
@@ -31,6 +34,12 @@
     </div>
     <footer>
       <p>Copyright © 2022 RimaSem for The Odin Project</p>
+      <a href="https://github.com/RimaSem"
+        ><img
+          class="github-link"
+          src="img/GitHub-Mark-Light-32px.png"
+          alt="Image link to GitHub"
+      /></a>
     </footer>
   </body>
 </html>
