Fix footer position

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <footer>
-      <p>Copyright © 2022 RimaSem for The Odin Project</p>
+      <p>Created by RimaSem for The Odin Project</p>
       <a href="https://github.com/RimaSem"
         ><img
           class="github-link"
